--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
 </body>
 <!-- <script src="./promiseajax.js"></script> -->
-<script src="./promise串行.js"></script>
+<script src="./compose.js"></script>
 <script>
 // document.getElementById("container").addEventListener("touchend", hovertreeMove);
 </script>
@@ -23,8 +23,22 @@
     /*地图(容器)显示大小*/
     width:800px;
 }
-.imgwrap{
+/* .imgwrap{
+    position: relative;
+    width: 100%;
+    height: 0;
+    padding-top: 80%;
+    overflow: hidden;
 }
+.imgwrap img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height: 100%;
+    width: 100%;
+} */
 .imgwrap img{
     width: 100%;
     height: auto;
