--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
 </body>
 <!-- <script src="./promiseajax.js"></script> -->
-<script src="./compose.js"></script>
+<script src="./once.js"></script>
 <script>
 // document.getElementById("container").addEventListener("touchend", hovertreeMove);
 </script>
