添加dom的操作的内容

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
 </body>
 <!-- <script src="./promiseajax.js"></script> -->
-<script src="./并行限制promise.js"></script>
+<script src="./dom操作类.js"></script>
 <script>
 // document.getElementById("container").addEventListener("touchend", hovertreeMove);
 </script>
